<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Catalog</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="car_name">Car Name</string>
    <string name="year">Year</string>
    <string name="condition">Condition</string>
    <string name="title_activity_new_car">NewCarActivity</string>
    <string name="title_activity_detail_info">DetailInfoActivity</string>
    <string name="title_activity_cars_list">CarsListActivity</string>
    <string name="car_object">CarObject</string>
    <string name="model">Model</string>
    <string name="take_photo">Take a photo</string>
    <string name="add_car">Add car</string>

</resources>
